# citadelle

./: .gitignore  QUICKSTART.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
scripts/: build-garamond-vfs.cjs  generate-icons.mjs
src/: App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/icons/src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  menu.rs
src-tauri/src/commands/: common.rs  exhibits.rs  export_templates.rs  filesystem.rs  goldocab_db.rs  goldocab_notes.rs  goldocab_sessions.rs  mod.rs  search.rs  styles.rs  templates.rs  themes.rs  user_data.rs
src/components/: BookmarkPanel.tsx  CharacterPanel.tsx  CommandPalette.css  CommandPalette.tsx  CompactSidebar.tsx  Dialog.tsx  DialogManager.tsx  DocumentMapPanel.tsx  Editor.tsx  ExportProgressOverlay.tsx  FindReplacePanel.tsx  FolderSidebar.tsx  KeyboardShortcutsDialog.tsx  LetterheadOverlay.tsx  MiniToolbar.tsx  PageViewEditor.tsx  PdfExportSettingsDialog.tsx  PiecesPanel.tsx  QuickFileSwitcher.tsx  Settings.tsx  SidePanel.tsx  StatusBar.tsx  TabBar.tsx  Toast.tsx  Toolbar.tsx  UnifiedExportDialog.tsx  UnifiedSidebar.tsx  WelcomeScreen.tsx
src/config/: panelIcons.tsx  panelRegistry.tsx
src/editor/: CollapsibleHeadingsExtension.ts  CommentExtension.ts  DefinedTermsExtension.ts  FootnoteExtension.ts  FrenchTypographyExtension.ts  KeyboardShortcutsExtension.ts  LegalNumberingExtension.ts  PageBreakExtension.ts  PasteHandlerExtension.ts  ResizableImageExtension.ts  extensions.ts  (+4 more)
(+248 files in other folders)
