[package]
name = "citadelle"
version = "0.1.4"
description = "Éditeur texte/markdown ultraléger et moderne"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "devtools", "dialog-confirm", "window-set-title", "fs-exists", "window-minimize", "window-maximize", "fs-write-file", "dialog-ask", "dialog-save", "dialog-message", "window-hide", "dialog-open", "fs-read-file", "window-unminimize", "window-unmaximize", "window-close", "window-show", "window-set-fullscreen", "window-start-dragging", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
urlencoding = "2.1"
uuid = { version = "1", features = ["v4"] }
rusqlite = { version = "0.31", features = ["bundled"] }

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
